--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
                 security and innovation.
               </p>
               <div class="custom-btn-group mt-4">
-                <a href="#" class="btn mr-lg-2 custom-btn"
+                <a href="/public/images/undraw/VAGNERCV.pdf" class="btn mr-lg-2 custom-btn"
                   ><i class="uil uil-file-alt"></i> Download CV</a
                 >
                 <!--<a
