--- a/views/index.ejs
+++ b/views/index.ejs
@@ -114,7 +114,7 @@
                 security and innovation.
               </p>
               <div class="custom-btn-group mt-4">
-                <a href="/public/images/undraw/VAGNERCV.pdf" class="btn mr-lg-2 custom-btn"
+                <a href="/cv" class="btn mr-lg-2 custom-btn"
                   ><i class="uil uil-file-alt"></i> Download CV</a
                 >
                 <!--<a
@@ -336,19 +336,18 @@
     </section>-->
 
     <!-- FOOTER -->
-    <!--<footer class="footer py-5">
+    <footer class="footer py-5">
           <div class="container">
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2019 Company Name . All rights reserved</p>
-                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+                        <p class="copyright-text text-center">Copyright &copy; 2024 Vagner Bom Jesus . All rights reserved</p>
                     </div>
                     
                </div>
           </div>
      </footer>
-    -->
+   
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
