--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
                 ><span data-hover="About">About</span></a
               >
             </li>
-            <!--<li class="nav-item">
+            <li class="nav-item">
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
                     <li class="nav-item">
@@ -64,7 +64,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
-                    </li>-->
+                    </li>
           </ul>
 
           <ul class="navbar-nav ml-lg-auto">
@@ -188,14 +188,14 @@
     </section>-->
 
     <!-- FEATURES -->
-    <!--<section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
+    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
         <div class="container">
             <div class="row">
 
                 <div class="col-lg-6 col-12">
                   <h2 class="mb-4">Experiences</h2>
 
-                    <div class="timeline">
+                    <!--<div class="timeline">
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
                                   <span>2019</span>
@@ -236,7 +236,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="col-lg-6 col-12">
@@ -245,31 +245,28 @@
                     <div class="timeline">
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
-                                  <span>2017</span>
+                                  <span>2024</span>
                              </div>
                              <div class="timeline-info">
-                                  <h3><span>Mobile Web</span><small>Master Design</small></h3>
-                                  <p>Please tell your friends about Tooplate website. That would be very helpful. We need your support.</p>
+                                  <h3><span>Master in Mobile Computing</span><small>at the Polytechnic Institute of Guarda Portugal</small></h3>
                              </div>
                         </div>
 
                         <div class="timeline-wrapper">
                             <div class="timeline-yr">
-                                <span>2015</span>
+                                <span>2024</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>User Interfaces</span><small>Creative Agency</small></h3>
-                                <p><a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a> is a great website to download HTML templates without any login or email.</p>
+                                <h3><span>Degree in Computer Engineering</span><small>at the Polytechnic Institute of Guarda Portugal</small></h3>
                             </div>
                         </div>
                         
                         <div class="timeline-wrapper">
                             <div class="timeline-yr">
-                                <span>2013</span>
+                                <span>2017</span>
                             </div>
                             <div class="timeline-info">
-                                <h3><span>Artwork Design</span><small>New Art School</small></h3>
-                                <p>You can freely use Tooplate's templates for your business or personal sites. You cannot redistribute this template without a permission.</p>
+                                <h3><span>Science and Technology </span><small> at the National Lyceum of São Tóme and Pricipe</small></h3>
                             </div>
                         </div>
 
@@ -278,10 +275,10 @@
                 
             </div>
         </div>
-    </section>-->
+    </section>
 
     <!-- CONTACT -->
-    <!--<section class="contact py-5" id="contact">
+    <section class="contact py-5" id="contact">
       <div class="container">
         <div class="row">
           
@@ -309,7 +306,7 @@
             <div class="contact-form">
               <h2 class="mb-4">Interested to work together? Let's talk</h2>
 
-              <form action="" method="get">
+              <form action="/send-email" method="post">
                 <div class="row">
                   <div class="col-lg-6 col-12">
                     <input type="text" class="form-control" name="name" placeholder="Your Name" id="name">
@@ -333,7 +330,7 @@
 
         </div>
       </div>
-    </section>-->
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer py-5">
