--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,13 +95,14 @@
                 <span class="mobile-block">my portfolio website!</span></small
               >
               <h1 class="animated animated-text">
-                <span class="mr-2">Hey folks, I'm</span>
+                <span class="mr-2">Hey folks, I love</span>
                 <div class="animated-info">
-                  <span class="animated-item">Developer</span>
-                  <span class="animated-item">Researcher</span>
+                  <span class="animated-item">Development</span>
+                  <span class="animated-item">Research</span>
                   <span class="animated-item">Cybersecurity</span>
                 </div>
               </h1>
+              
 
               <p>
                 Born in São Tomé and Príncipe, the LEVE LEVE islands, I am a
