style in page register and login

--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a href="#about" class="nav-link"
+              <a href="/#about" class="nav-link"
                 ><span data-hover="About">About</span></a
               >
             </li>
