--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,7 +78,7 @@
             <div class="contact-form">
               <h2 class="mb-4">Sign up, helps you communicate and share with the people in your life.</h2>
 
-              <form action="/users/register" method="POST">
+              <form action="/register" method="POST">
                 <div class="row">
                     <div class="col-12">
                         <input type="text" class="form-control" placeholder="Your Name" id="name"
