--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
       name="keywords"
       content="Software Developer, Cybersecurity, Data Protection, Innovative Solutions, Programming, Portfolio, Digital Safety, Data Security, Tech Enthusiast, Coding"
     />
+    <meta name="google-adsense-account" content="ca-pub-2308250412069180">
 
     <meta name="author" content="Vagner Bom Jesus" />
 
@@ -359,5 +360,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
   </body>
 </html>
