update add google

--- a/views/cv.ejs
+++ b/views/cv.ejs
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
     <!-- MAIN STYLE -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
+     
     <link rel="stylesheet" href="css/tooplate-style.css" />
   </head>
   <body>
