--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,9 @@
     />
     <meta name="google-adsense-account" content="ca-pub-2308250412069180">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
+
     <meta name="author" content="Vagner Bom Jesus" />
 
     <title>Vagner Bom Jesus - Software Developer, Cybersecurity</title>
