--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="css/unicons.css" />
   <link rel="stylesheet" href="css/owl.carousel.min.css" />
   <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+  crossorigin="anonymous"></script>
   <!-- MAIN STYLE -->
   <link rel="stylesheet" href="css/tooplate-style.css" />
 </head>
