--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Perfil do Usuário</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Perfil do Usuário</h1>
