--- a/views/church/index.ejs
+++ b/views/church/index.ejs
@@ -27,6 +27,9 @@
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css" />
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- MENU -->
