--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -20,6 +20,10 @@
 
   <!-- MAIN STYLE -->
   <link rel="stylesheet" href="css/tooplate-style.css" />
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
+     
 </head>
 
 <body>
