--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
      crossorigin="anonymous"></script>
 
+     <script async src="https://fundingchoicesmessages.google.com/i/pub-2308250412069180?ers=1" nonce="oljbTM79VSTpwXDW2sfDiw"></script><script nonce="oljbTM79VSTpwXDW2sfDiw">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
     <meta name="author" content="Vagner Bom Jesus" />
 
     <title>Vagner Bom Jesus - Software Developer, Cybersecurity</title>
