--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,157 +1,164 @@
+<!-- public/404.html -->
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Software Developer portfolio highlighting a passion for innovative solutions and a strong commitment to cybersecurity. Showcasing a blend of advanced programming skills and a dedication to data protection and digital safety."
+    />
+    <meta
+      name="keywords"
+      content="Software Developer, Cybersecurity, Data Protection, Innovative Solutions, Programming, Portfolio, Digital Safety, Data Security, Tech Enthusiast, Coding"
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description"
-    content="Software Developer portfolio highlighting a passion for innovative solutions and a strong commitment to cybersecurity. Showcasing a blend of advanced programming skills and a dedication to data protection and digital safety." />
-  <meta name="keywords"
-    content="Software Developer, Cybersecurity, Data Protection, Innovative Solutions, Programming, Portfolio, Digital Safety, Data Security, Tech Enthusiast, Coding" />
+    <meta name="author" content="Vagner Bom Jesus" />
 
-  <meta name="author" content="Vagner Bom Jesus" />
+    <title>Vagner Bom Jesus - Software Developer, Cybersecurity</title>
 
-  <title>Login - Software Developer, Cybersecurity</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/unicons.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/unicons.css" />
-  <link rel="stylesheet" href="css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
-  crossorigin="anonymous"></script>
-  <!-- MAIN STYLE -->
-  <link rel="stylesheet" href="css/tooplate-style.css" />
-</head>
+    <!-- MAIN STYLE -->
+    <link rel="stylesheet" href="css/tooplate-style.css" />
 
-<body>
-  <!-- MENU -->
-  <nav class="navbar navbar-expand-sm navbar-light">
-    <div class="container">
-      <a class="navbar-brand" href="/"><i class="uil uil-user"></i> Vagner Bom Jesus</a>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2308250412069180"
+     crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <!-- MENU -->
+    <nav class="navbar navbar-expand-sm navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="/"
+          ><i class="uil uil-user"></i> Vagner Bom Jesus</a
+        >
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a href="/#about" class="nav-link"><span data-hover="About">About</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="/#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="/#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="/#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
-          </li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a href="#about" class="nav-link"
+                ><span data-hover="About">About</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#project" class="nav-link"
+                ><span data-hover="Projects">Projects</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#resume" class="nav-link"
+                ><span data-hover="Resume">Resume</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link"
+                ><span data-hover="Contact">Contact</span></a
+              >
+            </li>
+          </ul>
 
-
-          <li class="nav-item">
-            <a href="/login" class="nav-link"><span data-hover="Login">Login</span></a>
-          </li>
-        </ul>
-
-        <ul class="navbar-nav ml-lg-auto">
-          <div class="ml-lg-4">
-            <div class="color-mode d-lg-flex justify-content-center align-items-center">
-              <i class="color-mode-icon"></i>
-              Color mode
+          <ul class="navbar-nav ml-lg-auto">
+            <div class="ml-lg-4">
+              <div
+                class="color-mode d-lg-flex justify-content-center align-items-center"
+              >
+                <i class="color-mode-icon"></i>
+                Color mode
+              </div>
             </div>
-          </div>
-        </ul>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-  <!--Login-->
-  <section class="project py-5" id="project">
+
+           <!-- ABOUT -->
+    <section
+    class="about full-screen d-lg-flex justify-content-center align-items-center"
+    id="about"
+  >
     <div class="container">
       <div class="row">
-        <div class="col-lg-11 text-center mx-auto col-12">
-          <div class="col-lg-8 mx-auto">
-            <div class="contact-form">
-              <h2 class="mb-4">Sign in, helps you communicate and share with the people in your life.</h2>
+        <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
+          <div class="about-text">
+            
 
-              <form action="/login" method="POST">
-                <div class="row">
-                  <div class="col-lg-6 col-12">
-                    <input type="email" class="form-control" name="email" placeholder="Email" id="email" required />
-                  </div>
-
-                  <div class="col-lg-6 col-12">
-                    <input type="password" name="password" class="form-control" id="password" placeholder="Password"
-                      required />
-                  </div>
-                  <% if (error) { %>
-
-                    <div class="col-lg-6 col-12">
-                      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
-                          <use xlink:href="#exclamation-triangle-fill" />
-                        </svg>
-  
-                        <strong>
-                          <%= error %>
-                        </strong>
-                         
-                         
-                          The provided email or password is incorrect.
-                         
-                      </div>
-                    </div>
-                   
-                    <% } %>
-
-
-                      <div class="ml-lg-auto col-lg-5 col-12">
-                        <a href="#" style="text-decoration: underline;">Recover Password</a>
-
-
-                        <input type="submit" class="form-control submit-btn" value="Sign in" />
-                        <a href="/register" class="btn mr-lg-12 form-control custom-btn"><i
-                            class="uil  uil-user-plus"></i>
-                          Create new account</a>
-                      </div>
-
-
-                </div>
-              </form>
-
+             
+          <h1 class="animated animated-text">
+            <span class="mr-2">YOU ARE LOOKING FOR CAN´T BE FOUND</span>
+           
+          </h1>
+            <p>
+                It seems like we donut find what you searched. The page you were looking for doesn´t exist, isn´t available or was loading incorrecty.
+            </p>
+            <div class="custom-btn-group mt-4">
+               
+              <a
+                href="/"
+                class="btn custom-btn custom-btn-bg custom-btn-link"
+                >GO TO HOME</a
+              >
             </div>
           </div>
         </div>
+
+        <div class="col-lg-5 col-md-12 col-12">
+          <div class="about-image svg">
+            <img
+              src="images/undraw/404.png"
+              class="img-fluid"
+              alt="svg image"
+            />
+          </div>
+        </div>
       </div>
+    </div>
   </section>
-  <div class="col-lg-6 col-12">
 
-  </div>
-  <!-- FOOTER -->
-  <footer class="footer py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-12">
-          <p class="copyright-text text-center">
-            Copyright &copy; 2024 Vagner Bom Jesus . All rights reserved
-          </p>
+  
+
+
+
+     <!-- FOOTER -->
+     <footer class="footer py-5">
+        <div class="container">
+             <div class="row">
+
+                  <div class="col-lg-12 col-12">                                
+                      <p class="copyright-text text-center">Copyright &copy; 2024 Vagner Bom Jesus . All rights reserved</p>
+                  </div>
+                  
+             </div>
         </div>
-      </div>
-    </div>
-  </footer>
+   </footer>
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/Headroom.js"></script>
-  <script src="js/jQuery.headroom.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/smoothscroll.js"></script>
-  <script src="js/custom.js"></script>
-</body>
-
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/Headroom.js"></script>
+    <script src="js/jQuery.headroom.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
